--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "A Vue component for generating URIs/slugs",
   "main": "dist/index.js",
   "scripts": {
-    "build": "rm -rf ./dist && webpack --colors --hide-modules"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config ./build/webpack.dev.js --open --inline --hot",
+    "build:debug": "cross-env NODE_ENV=debug webpack --config build/webpack.dist.js",
+    "build:release": "cross-env NODE_ENV=production webpack --config build/webpack.dist.js",
+    "build:examples": "webpack --config build/webpack.examples.js",
+    "build": "npm run build:debug && npm run build:release && npm run build:examples",
+    "clean": "rimraf ./examples/examples.bundle.css ./examples/examples.bundle.js"
   },
   "repository": {
     "type": "git",
@@ -24,21 +29,29 @@
   },
   "homepage": "https://github.com/jrhenderson1988/vue-slug#readme",
   "devDependencies": {
-    "autoprefixer": "^7.1.4",
-    "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
+    "autoprefixer": "^6.7.7",
+    "babel-core": "^6.0.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-es2015-destructuring": "^6.19.0",
+    "babel-plugin-transform-es2015-parameters": "^6.18.0",
+    "babel-plugin-transform-object-rest-spread": "^6.19.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-runtime": "^6.23.0",
-    "css-loader": "^0.23.1",
-    "postcss-load": "^0.1.6",
-    "style-loader": "^0.15.0",
-    "vue": "^2.2.4",
-    "vue-html-loader": "^1.2.4",
-    "vue-loader": "^11.1.4",
-    "vue-style-loader": "^2.0.4",
-    "vue-template-compiler": "^2.2.4",
-    "webpack": "^2.2.1"
+    "babel-preset-env": "^1.4.0",
+    "babel-preset-es2015": "^6.0.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "cross-env": "^3.0.0",
+    "css-loader": "^0.25.0",
+    "deep-assign": "^2.0.0",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "node-sass": "^4.5.2",
+    "rimraf": "^2.6.1",
+    "sass-loader": "^6.0.6",
+    "vue": "^2.2.6",
+    "vue-loader": "^11.3.3",
+    "vue-style-loader": "^3.0.0",
+    "vue-template-compiler": "^2.2.6",
+    "webpack": "^3.5.6",
+    "webpack-bundle-analyzer": "^2.2.1",
+    "webpack-dev-server": "^2.7.1"
   }
 }
